--- a/src/Membership.css
+++ b/src/Membership.css
@@ -84,22 +84,28 @@
     }
 }
 
-.logged-in-button {
+.logged-in-button,
+.passes-left-button {
     position: fixed;
-    /* Fixed positioning to keep it at the top right regardless of scrolling */
     top: 10px;
-    /* 10px from the top */
-    right: 10px;
-    /* 10px from the right */
     padding: 8px 16px;
-    background-color: #4CAF50;
-    /* Green background */
     color: white;
-    /* White text */
     border: none;
     border-radius: 50px;
-    /* Fully rounded corners for pill shape */
     cursor: pointer;
     z-index: 1000;
-    /* Ensures it stays on top of other content */
+}
+
+.logged-in-button {
+    /* right: 160px; */
+    right: 10px;
+    /* Adjust this value to position the button */
+    background-color: #4CAF50;
+    /* Green background */
+}
+
+.passes-left-button {
+    left: 10px;
+    background-color: #ff8100;
+    /* Orange background */
 }
