--- a/src/Membership.css
+++ b/src/Membership.css
@@ -8,9 +8,19 @@ button {
 
 .membership-container {
     display: flex;
+    height: 100vh;
+    width: 100%;
+    background-color: #FCF7F3;
     flex-direction: column;
-    min-height: 100vh;
-    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .main-content {
