--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,25 @@
+/* Apply height and flexbox to html and body to make the footer sticky at the bottom */
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Footer styles */
 .footer-container {
+    margin-top: auto;
+    /* Pushes the footer to the bottom */
     width: 100%;
-    /* background: linear-gradient(to left, #ff7e5f, #feb47b); */
     background-color: #FCF7F3;
     display: flex;
     flex-direction: column;
-
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-img {
@@ -18,4 +33,10 @@
     flex-direction: row;
     background-color: #FCF7F3;
     justify-content: center;
+}
+
+@media (max-width: 768px) {
+    .footer-img {
+        width: 90%;
+    }
 }
