--- a/src/Membership.css
+++ b/src/Membership.css
@@ -25,7 +25,7 @@
 
 .perk-image {
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     margin-top: 20px;
     width: 100%;
     height: 250px;
@@ -37,11 +37,30 @@
     /* default for mobile */
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) and (max-width: 1279px) {
     .perks-container {
         flex-direction: row;
         flex-wrap: wrap;
-        /* allows items to wrap if necessary */
+    }
+
+    .perk-item {
+        flex: 1 1 calc(50% - 20px);
+        /* Two items per row on laptops */
+        margin-right: 20px;
+        box-sizing: border-box;
+        margin-bottom: 20px;
+    }
+
+    .perk-item:nth-child(2n) {
+        margin-right: 0;
+        /* Remove margin for every 2nd item */
+    }
+}
+
+@media (min-width: 1280px) {
+    .perks-container {
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .perk-item {
@@ -50,7 +69,6 @@
         margin-right: 20px;
         box-sizing: border-box;
         margin-bottom: 20px;
-        /* Ensure spacing at the bottom */
     }
 
     .perk-item:nth-child(3n) {
@@ -59,19 +77,23 @@
     }
 }
 
-/* Ensure no overlapping by using clear: both */
-.perk-item::after {
-    content: "";
-    display: table;
-    clear: both;
-}
+@media (max-width: 1023px) {
+    .perks-container {
+        flex-direction: column;
+    }
 
-@media (max-width: 768px) {
     .perk-item {
         flex: 0 0 100%;
         /* Full width for smaller screens */
         margin-right: 0;
     }
+}
+
+/* Ensure no overlapping by using clear: both */
+.perk-item::after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 /* Rest of your CSS */
