--- a/src/components/FooterBuy.css
+++ b/src/components/FooterBuy.css
@@ -10,6 +10,7 @@
     position: sticky;
     bottom: 0;
     z-index: 100;
+    box-shadow: 0 -1px 12px 0 rgba(0, 0, 0, .18);
 }
 
 .footerbuy-button {
